# arc_sawyer_project

./: .gitignore  CMakeLists.txt  package.xml  setup.py
launch/: aruco.launch  kinect.launch  sawyer_pick_and_place_demo.launch
models/block/: model.config  model.sdf
models/block/materials/: aruco.material
models/block/meshes/: Burger.blend
models/kinect/: model-1_2.sdf  model-1_3.sdf  model-1_4.sdf  model.sdf
scripts/: manipulation.py  perception.py  pick_and_place.py  rviz.py
